--- a/api-info.yaml
+++ b/api-info.yaml
@@ -8,4 +8,4 @@ spec:
   lifecycle: production
   owner: spotify
   definition:
-    $text: https://api.apis.guru/v2/specs/1forge.com/0.0.1/swagger.yaml
+    $text: https://github.com/APIs-guru/openapi-directory/main/APIs/bbc.co.uk/1.0.0/swagger.yaml
